Update to CSS to remove spacing issue in rendered date

--- a/eventonica/client/src/components/CalendarApp.css
+++ b/eventonica/client/src/components/CalendarApp.css
@@ -47,7 +47,7 @@
 .navigate-date h2 {
   font-size: clamp(1.5rem, 1.5cqi, 2.5rem);
   color: #bbb;
-  padding-left: 1.3rem;
+  padding-left: 0;
 }
 
 .buttons {
